Not Released
======================================================================

Contributors (alphabetical order):
	Aaron Hetherington <aaron.hetherington@intel.com>
	Marcel Cornu <marcel.d.cornu@intel.com>
	Tomasz Kantecki <tomasz.kantecki@intel.com>
	Wojciech Andralojc <wojciechx.andralojc@intel.com>

Summary:
1. Library
	- Perl interface extended to support L2 CAT and CMT
2. SNMP
	- Added CMT support to Net-SNMP sub-agent

======================================================================
Release  v0.1.5  2016-09-20
======================================================================

Contributors (alphabetical order):
	Aaron Hetherington <aaron.hetherington@intel.com>
	Colin Ian King <colin.king@canonical.com>
	Fan Du <fan.du@intel.com>
	Marcel Cornu <marcel.d.cornu@intel.com>
	Pablo Marcos Oltra <pablo.marcos.oltra@intel.com>
	Tomasz Kantecki <tomasz.kantecki@intel.com>
	Wojciech Andralojc <wojciechx.andralojc@intel.com>

Summary:
1. General
	- Project file layout changed to accommodate extensions
	- Support for FreeBSD
	- Travis CI
2. Library
	- Support for Intel(R) Xeon(R) processor E5 v4
	- DSO built by default
	- examples moved to the top folder
	- Perl interface created for the library
	- PID API no longer compiled by default
	- Support for L2 CAT
	- Makefile dependencies improved
3. PQoS Utility
	- pqos directory created to accommodate the utility files
	- Link against DSO
	- COS management on a per socket basis
	- Support for L2 CAT
	- Makefile dependencies improved
4. rdtset Utility
	- rdtset directory created to accommodate the utility files
	- Link against DSO
	- taskset-like functionality and CAT configuration
	- Support for L2 CAT
	- Makefile dependencies improved
5. Examples
	- Copied examples previously located in library directory
	- Perl hello world script created
6. SNMP
	- Net-SNMP sub-agent created to allow remote CAT configuration
7. SRPM
	- Source package file and spec file
