@@ -46,14 +46,20 @@
 extern "C" {
 #endif
 
+#define LOG_VER_SILENT          (-1)
+#define LOG_VER_DEFAULT         (0)
+#define LOG_VER_VERBOSE         (1)
+#define LOG_VER_SUPER_VERBOSE   (2)
+
 #define LOG_RETVAL_OK           0         /**< everything OK */
 #define LOG_RETVAL_ERROR        1         /**< generic error */
 
-#define LOG_OPT_INFO  (1<<0)
-#define LOG_OPT_WARN  (1<<1)
-#define LOG_OPT_ERROR (1<<2)
-#define LOG_OPT_DEBUG (1<<3)
+#define LOG_OPT_INFO   (1 << 0)
+#define LOG_OPT_WARN   (1 << 1)
+#define LOG_OPT_ERROR  (1 << 2)
+#define LOG_OPT_DEBUG  (1 << 3)
 
+#define LOG_OPT_SILENT          (-1)
 #define LOG_OPT_DEFAULT         (LOG_OPT_WARN|LOG_OPT_ERROR)
 #define LOG_OPT_VERBOSE         (LOG_OPT_WARN|LOG_OPT_ERROR|LOG_OPT_INFO)
 #define LOG_OPT_SUPER_VERBOSE   (LOG_OPT_WARN|LOG_OPT_ERROR|LOG_OPT_INFO| \
@@ -66,18 +72,41 @@ extern "C" {
 
 /**
  * @brief Initializes PQoS log module
+ * There are five typical use cases for this function
+ *  [1] log to file descriptor only
+ *  @note log_init(fd_log, NULL, NULL, LOG_VER_DEFAULT);
+ *  [2] use callback function to capture logs
+ *  @note log_init(-1, custom_callback, NULL, LOG_VER_DEFAULT);
+ *  [3] use callback with a custom context
+ *  @note log_init(-1, custom_callback, anything, LOG_VER_DEFAULT);
+ *  [4] use both a callback and file descriptor
+ *  @note log_init(fd_log, custom_callback, NULL, LOG_VER_DEFAULT);
+ *  [5] keep all logging silent
+ *  @note log_init(-1, NULL, NULL, LOG_VER_SILENT);
  *
- * @param [in] fd file descriptor to be used as library log
- * @param [in] opt logging options bitmask
- *         LOG_OPT_INFO  - information messeges
- *         LOG_OPT_WARN  - warnging messegaes
- *         LOG_OPT_ERROR - error messegaes
- *         LOG_OPT_DEBUG - debug messeges
+ * @param [in] fd_log file descriptor to be used as library log
+ * @param [in] callback_log pointer to an application callback function
+ *         void *       - An application context - it can point to a structure
+ *                        or an object that an application may find useful
+ *                        when receiving the callback
+ *         const size_t - the size of the log message
+ *         const char * - the log message
+ * @param [in] context_log application specific data that is provided
+ *                    to the callback function. It can be NULL if application
+ *                    doesn't require it.
+ * @param [in] verbosity logging options
+ *         LOG_VER_SILENT         - no messages
+ *         LOG_VER_DEFAULT        - warning and error messages
+ *         LOG_VER_VERBOSE        - warning, error and info messages
+ *         LOG_VER_SUPER_VERBOSE  - warning, error, info and debug messages
  *
  * @return Operation status
  * @retval LOG_RETVAL_OK on success
  */
-int log_init(int fd, int opt);
+int log_init(int fd_log,
+            void (*callback_log)(void *, const size_t, const char *),
+            void *context_log,
+            int verbosity);
 
 /**
  * @brief Shuts down PQoS log module
